tests/sksl/errors/ReservedNameVarying.glsl
### Compilation failed:

error: 1: 'varying' is a reserved word
int varying;
    ^^^^^^^
1 error
